# atom

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  atom.rb  test.ts
docs/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
docs/src/: app.css  app.html
docs/src/routes/: +layout.svelte  +page.svx
docs/src/routes/commands/: +page.svx
docs/src/routes/customization/: +page.svx
docs/src/routes/installation/: +page.svx
docs/src/routes/keybindings/: +page.svx
docs/src/routes/prerequisites/: +page.svx
src/: app.rs  git.rs  main.rs
src/app/: actions.rs  runtime.rs
src/app/handlers/: command.rs  confirm.rs  explorer.rs  insert.rs  mason.rs  mod.rs  normal.rs  nucleus.rs  search.rs  telescope.rs  visual.rs  visual_block.rs
src/config/: mod.rs
src/editor/: buffer.rs  cursor.rs  highlighter.rs  mod.rs  todo.rs  treesitter.rs
src/input/: event.rs  keymap.rs  mod.rs
src/lsp/: client.rs  mod.rs
src/plugin/: explorer.rs  mod.rs  telescope.rs  treesitter.rs  trouble.rs
src/plugins/: explorer.rs  lsp.rs  mod.rs  todo_comments.rs
src/ui/: colorscheme.rs  explorer.rs  icons.rs  intro.rs  keymaps.rs  mason.rs  mod.rs  nucleus.rs  telescope.rs  trouble.rs
src/vim/: mod.rs  mode.rs  motion.rs
