[package]
name = "atom"
version = "0.1.4"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["events"] }
ignore = "0.4.22"
lsp-types = "0.95.0"
lsp-server = "0.7.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.116"
crossbeam-channel = "0.5.12"
git2 = "0.19.0"
tree-sitter = "0.24.3"
tree-sitter-highlight = "0.24.3"
libloading = "0.8.3"
cc = "1.0.97"
ropey = "1.6.1"
unicode-width = "0.1.11"
notify = "6.1.1"
